--- a/src/index.html
+++ b/src/index.html
@@ -81,13 +81,44 @@
             </div>
         </div>
     </main>
-  <div class="cookie-consent">
-    <p>This website uses cookies to improve your experience. By clicking <b>Agree</b>, you consent to our use of cookies in accordance with our <a href="privacy.html">Privacy Policy</a>.</p>
-    <button id="accept-button">I Agree</button>
-    <button id="decline-button">I Decline</button>
+    <!-- Cookie Modal-->
+    <div class="modal fade" id="cookie-consent" tabindex="-1" role="dialog" aria-labelledby="cookie-consent-title" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="cookie-consent-title">Cookie Consent</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>This website uses cookies to improve your experience. By clicking <b>Agree</b>, you consent to our use of cookies in accordance with our <a href="privacy.html">Privacy Policy</a>.</p>
+      </div>
+      <div class="modal-footer">
+        <button id="accept-button" type="button" class="btn btn-primary" data-bs-dismiss="modal">I Agree</button>
+        <button id="decline-button" type="button" class="btn btn-secondary" data-bs-dismiss="modal">I Decline</button>
+      </div>
+    </div>
+  </div>
 </div>
-<script>
-function getCookie(name) {
+    <style>
+        #cookie-consent {
+  z-index: 1051;
+}
+
+#cookie-consent .modal-dialog {
+  margin-top: 10%;
+}
+
+#cookie-consent .modal-body {
+  margin-bottom: 20px;
+}
+
+#cookie-consent .modal-footer {
+  border-top: 0;
+}
+
+    </style>
+    <script>
+        function getCookie(name) {
   var value = "; " + document.cookie;
   var parts = value.split("; " + name + "=");
   if (parts.length == 2) {
@@ -106,70 +137,39 @@ function setCookie(name, value, days) {
 }
 
 document.addEventListener("DOMContentLoaded", function() {
-  var cookieConsent = document.querySelector(".cookie-consent");
-  var overlay = document.createElement("div");
-  overlay.classList.add("overlay");
+  var cookieConsent = document.getElementById("cookie-consent");
 
   // Check if cookie is present
   if (getCookie("cookie_consent") === "true") {
-    // Cookie is present, hide cookie consent banner
-    cookieConsent.style.display = "none";
-    // Enable scrolling
-    document.body.style.overflow = "auto";
+    // Cookie is present, do nothing
   } else {
-    // Cookie is not present, show cookie consent banner
-    cookieConsent.style.display = "block";
-    // Disable scrolling
-    document.body.style.overflow = "hidden";
-    // Add overlay
-    document.body.appendChild(overlay);
+    // Cookie is not present, show cookie consent modal
+    var modal = new bootstrap.Modal(cookieConsent);
+    modal.show();
   }
 
   // Add event listener to accept button
-  document
-    .getElementById("accept-button")
-    .addEventListener("click", function() {
-      // Set cookie
-      setCookie("cookie_consent", "true", 365);
-      // Remove cookie consent banner
-      cookieConsent.style.display = "none";
-      // Remove overlay
-      document.body.removeChild(overlay);
-      // Enable scrolling
-      document.body.style.overflow = "auto";
-    });
+  document.getElementById("accept-button").addEventListener("click", function() {
+    // Set cookie
+    setCookie("cookie_consent", "true", 365);
+  });
 
   // Add event listener to decline button
-  document
-    .getElementById("decline-button")
-    .addEventListener("click", function() {
-      // Set cookie
-      setCookie("cookie_consent", "false", 365);
-      // Remove cookie consent banner
-      cookieConsent.style.display = "none";
-      // Remove overlay
-      document.body.removeChild(overlay);
-      // Enable scrolling
-      document.body.style.overflow = "auto";
-      // Delete existing cookies
-      document.cookie.split(";").forEach(function(c) {
-        document.cookie = c.replace(/^ +/, "").replace(/=.*/, "=;expires=" + new Date().toUTCString() + ";path=/");
-      });
+  document.getElementById("decline-button").addEventListener("click", function() {
+    // Set cookie
+    setCookie("cookie_consent", "false", 365);
+    // Delete existing cookies
+    document.cookie.split(";").forEach(function(c) {
+      document.cookie = c.replace(/^ +/, "").replace(/=.*/, "=;expires=" + new Date().toUTCString() + ";path=/");
     });
+  });
 });
-</script>
-    <style>
-        .cookie-consent {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #d2f3ca;
-  padding: 20px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  z-index: 9999;
-}
-    </style>
+
+    </script>
+
+
+
+
 
 
 
