--- a/src/privacy.html
+++ b/src/privacy.html
@@ -83,62 +83,74 @@
             <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
 
                 <h1 class="fw-bold border-bottom" id="title">Privacy Policy</h1>
-                <div class="text-muted mb-3 ">By <a href="#">Rick Kanashiro</a><span class="text-muted me-3"> Last Updated:
-              March 21, 2023</span> <span class="text-muted" id="readingTime">0</span>
+                <div class="text-muted mb-3 ">By <a href="#">Author Name</a><span class="text-muted me-3"> Last Updated:
+              January 1, 2022</span> <span class="text-muted" id="readingTime">0</span>
                 </div>
                 <section class="row">
-                    <h1>Privacy Policy for MyWebClass.org</h1>
+                    <h1>Privacy Policy</h1>
 
-                    <p>MyWebClass.org was created for and is intended to be used for the IS218 (Spring 2023) course at the
-                        New Jersey Institute of Technology, taught by Professor Keith Williams. This page is used to inform
-                        website visitors regarding our policies with the collection, use, and disclosure of Personal Information.</p>
-
-                    <p>If you choose to use our website, then you agree to the collection and use of information in relation with
-                        this policy. The Personal Information that we collect is used for providing and improving the service.
-                        We will not use or share your information with anyone except as described in this Privacy Policy.</p>
-
-                    <h2>Information Collection and Use</h2>
-
-                    <p>While using our Site, we may ask you to provide us with certain personally identifiable information that can be
-                        used to contact or identify you. Personally identifiable information may include, but is not limited to your
-                        name, email address, phone number, postal address, and other similar information.</p>
-
-                    <p>We may also collect non-personally identifiable information about your visit to the Site, such as the pages
-                        viewed, the time spent on the Site, and the websites visited just before and just after our Site.
-                        This information is collected through the use of cookies and Google Analytics.</p>
-
+                    <p>We at mywebclass.org are committed to protecting your privacy. This Privacy Policy explains what
+                        information we collect from you when you visit our website, how we use it, and how we protect
+                        it. By using our website, you agree to the terms of this Privacy Policy.</p>
+                    <h2>Information we collect</h2>
+                    <p>We may collect the following information from you when you visit our website:</p>
+                    <ul>
+                        <li>Personal information such as your name and email address, if you choose to provide it to
+                            us.
+                        </li>
+                        <li>Information about your use of the website, such as pages visited, time spent on the site,
+                            and links clicked.
+                        </li>
+                        <li>Information about your device, such as your IP address, browser type, and operating
+                            system.
+                        </li>
+                    </ul>
+                    <h2>How we use your information</h2>
+                    <p>We use the information we collect from you for the following purposes:</p>
+                    <ul>
+                        <li>To improve our website and the user experience.</li>
+                        <li>To analyze user behavior and measure the effectiveness of our content and marketing
+                            efforts.
+                        </li>
+                        <li>To communicate with you about our products and services, if you have provided us with your
+                            contact information.
+                        </li>
+                        <li>To comply with legal obligations.</li>
+                    </ul>
                     <h2>Google Analytics</h2>
-
-                    <p>We use Google Analytics to collect information about visitor behavior on our Site. This information is used to
-                        compile reports and to help us improve the Site. The information collected is anonymous and does not personally
-                        identify you. It includes data such as the type of device and browser you are using, your geographic location, the
-                        pages you view, and the duration of your visit. You can learn more about Google Analytics and how it collects and
-                        processes data at https://policies.google.com/technologies/partner-sites.</p>
-
-                    <p>Cookies are files with small amounts of data, which may include information such as an anonymous unique
-                        identifier. Cookies are sent to your browser from a website and stored on your device. You can instruct your
-                        browser to refuse all cookies or to indicate when a cookie is being sent. However, if you do not accept
-                        cookies, you may not be able to use some portions of our Site.</p>
-
-                    <h2>Security</h2>
-
-                    <p>The security of your Personal Information is important to us, but remember that no method of transmission over
-                        the Internet, or method of electronic storage, is 100% secure. While we strive to use commercially acceptable
-                        means to protect your Personal Information, we cannot guarantee its absolute security.</p>
-
-                    <h2>Links to Other Sites</h2>
-
-                    <p>Our Site may contain links to other sites that are not operated by us. If you click on a third-party link, you
-                        will be directed to that third party's site. We strongly advise you to review the Privacy Policy of every site
-                        you visit. We have no control over and assume no responsibility for the content, privacy policies or practices
-                        of any third-party sites or services.</p>
-
-                    <h2>Changes to This Privacy Policy</h2>
-
-                    <p>We reserve the right and may update our Privacy Policy from time to time without notice. We will modify any
-                        changes by posting the new Privacy Policy on this page. You are advised to review this Privacy Policy
-                        periodically for any changes. Changes to this Privacy Policy are effective immediately as of their posting on
-                        this page.</p>
+                    <p>We use Google Analytics to collect information about your use of our website. Google Analytics
+                        collects information such as how often users visit the site, what pages they visit when they do
+                        so, and what other sites they used prior to coming to our website. We use the information we get
+                        from Google Analytics to improve our website and the user experience. Google Analytics collects
+                        only the IP address assigned to you on the date you visit our website, rather than your name or
+                        other identifying information. We do not combine the information collected through the use of
+                        Google Analytics with personally identifiable information. Google Analytics plants a permanent
+                        cookie on your web browser to identify you as a unique user the next time you visit our website.
+                        This cookie cannot be used by anyone other than Google. Google’s ability to use and share
+                        information collected by Google Analytics about your visits to our website is restricted by the
+                        Google Analytics Terms of Use and the Google Privacy Policy.</p>
+                    <h2>Data retention and security</h2>
+                    <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
+                        it was collected, unless a longer retention period is required by law. We take reasonable
+                        measures to protect the information we collect from loss, theft, misuse, and unauthorized
+                        access, disclosure, alteration, and destruction.</p>
+                    <h2>Data retention and security</h2>
+                    <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
+                        it was collected, unless a longer retention period is required by law. We take reasonable
+                        measures to protect the information we collect from loss, theft, misuse, and unauthorized
+                        access, disclosure, alteration, and destruction.</p>
+                    <h2>Your rights</h2>
+                    <p>You have the right to access, correct, and delete your personal information. You also have the
+                        right to object to the processing of your personal information and to withdraw your consent to
+                        the processing of your personal information. To exercise these rights, please contact us at
+                        [contact email address].</p>
+                    <h2>Changes to this Privacy Policy</h2>
+                    <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting
+                        the new Privacy Policy on this page. We recommend that you review this Privacy Policy
+                        periodically for any changes.</p>
+                    <h2>Contact us</h2>
+                    <p>If you have any questions about this Privacy Policy, please contact us at [contact email
+                        address].</p>
 
                 </section>
 
